# nag-rs

./: .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: config.rs  error_code.rs  lib.rs  nag.rs  recv.rs
common/tests/: test_nag.rs  test_recv.rs  test_send.rs
github/workflows/: ci.yml
nag/: Cargo.toml
nag/src/: main.rs
nagd/: Cargo.toml
nagd/src/: main.rs
shared/: Cargo.toml
shared/src/: command.rs  error_code.rs  lib.rs  nag.rs  recv.rs  response.rs  send.rs
shared/tests/: test_nag.rs  test_recv.rs  test_send.rs
systemd/: nagd.service
