[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dirs = "5.0.1"
duration-str = "0.11.2"
once_cell = "1.20.2"
serde = { version = "1.0.210", features = [ "derive" ] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
