[package]
name = "nag"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.19"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shared = { path = "../shared" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
