[package]
name = "nagd"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
duration-str = "0.11.2"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
common = { path = "../common" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
